--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node -r dotenv/config server.js",
     "start:watch": "nodemon -r dotenv/config server.js",
     "setup-db": "node -r dotenv/config setup-db.js",
-    "setup-heroku": "heroku run npm run setup-db"
+    "setup-heroku": "heroku run npm run setup-db",
+    "seed": "node -r dotenv/config seed.js"
   },
   "jest": {
     "testEnvironment": "node"
