--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "supertest": "^6.1.3"
   },
   "dependencies": {
+    "cloudinary": "^1.25.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
